--- a/index.html
+++ b/index.html
@@ -128,35 +128,31 @@
           <div class="card h-100 border-0" style="background-color: #f4f4f4">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
-
                 <div class="text-center">
                   <img src="img/icons/autos.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
                 <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
-                    por daños materiales al vehículo o rodado
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o rodado
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
-                    por daños físicos o psicológicos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños físicos o psicológicos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por
-                    incapacidad
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por incapacidad
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
                   </li>
                 </ul>
               </div>
@@ -175,28 +171,28 @@
                 <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños materiales al vehículo o rodado
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños físicos o psicológicos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
                     incapacidad
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
                   </li>
                 </ul>
               </div>
@@ -215,28 +211,28 @@
                 <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños materiales al vehículo o rodado
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños físicos o psicológicos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
                     incapacidad
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
                   </li>
                 </ul>
               </div>
@@ -255,28 +251,28 @@
                 <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños materiales al vehículo o rodado
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños físicos o psicológicos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
                     incapacidad
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
                   </li>
                 </ul>
               </div>
@@ -295,28 +291,28 @@
                 <h4 class="card-title text-center fs-3 pt-2">Accidentes de tránsito</h4>
                 <ul class="list-group list-group-flush pb-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños materiales al vehículo o rodado
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Reclamos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
                     por daños físicos o psicológicos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
                     incapacidad
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por muerte
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2" style="color:#D4A067;"></i>Indemnizaciones por secuelas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
                   </li>
                 </ul>
               </div>
