--- a/index.html
+++ b/index.html
@@ -168,24 +168,21 @@
                 <div class="text-center">
                   <img src="img/icons/familia.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
-                <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                <h4 class="card-title text-center fs-3">Derecho de Familia</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños materiales al vehículo o rodado
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Alimentos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños físicos o psicológicos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Régimen de visitas
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
-                    incapacidad
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Divorcios
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Homologaciones de acuerdo
                   </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
+                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
@@ -193,7 +190,7 @@
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <a href="#" class="btn btn-dark w-100 ">Contactar</a>
@@ -208,32 +205,29 @@
                 <div class="text-center">
                   <img src="img/icons/martillo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
-                <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                <h4 class="card-title text-center fs-3">Derecho Privado</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños materiales al vehículo o rodado
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Alquileres
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños físicos o psicológicos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de facturas
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
-                    incapacidad
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de cheques y otros títulos ejecutivos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Redacción y revisión de contratos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Seguros
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de alquileres y expensas
                   </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
+                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <a href="#" class="btn btn-dark w-100 ">Contactar</a>
@@ -248,32 +242,29 @@
                 <div class="text-center">
                   <img src="img/icons/sucesion.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
-                <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                <h4 class="card-title text-center fs-3">Sucesiones</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños materiales al vehículo o rodado
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Declaratoria de herederos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños físicos o psicológicos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Partición de bienes
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
-                    incapacidad
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Costo y duración del trámite
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Acuerdo entre herederos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cesión de derechos hereditarios
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Venta de inmuebles y muebles
                   </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
+                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <a href="#" class="btn btn-dark w-100 ">Contactar</a>
@@ -288,32 +279,29 @@
                 <div class="text-center">
                   <img src="img/icons/trabajo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
-                <h4 class="card-title text-center fs-3 pt-2">Accidentes de tránsito</h4>
+                <h4 class="card-title text-center fs-3 pt-2">Derecho Laboral</h4>
                 <ul class="list-group list-group-flush pb-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños materiales al vehículo o rodado
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Accidentes de trabajo
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos
-                    por daños físicos o psicológicos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Enfermedades profesionales
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por
-                    incapacidad
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Despidos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de haberes
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i> Envío de telegramas y contestación de cartas documentos
                   </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
+                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <a href="#" class="btn btn-dark w-100 ">Contactar</a>
