boton wpp en materias

--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
         <h2>Quienes somos</h2>
         <div class="col-12 col-lg-6 d-flex flex-column justify-content-between py-3">
           <div class="fs-5">
-            <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
-            <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la instancia extrajudicial, como judicialmente.</p>
+            <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la
+              confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de
+              cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
+            <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la instancia
+              extrajudicial, como judicialmente.</p>
           </div>
           <div class="d-flex justify-content-end">
             <button type="button" class="btn btn-dark px-5">Conozca más</button>
@@ -134,7 +137,8 @@
                 <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o rodado
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o
+                    rodado
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños físicos o psicológicos
@@ -156,7 +160,8 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Accidentes%20de%20Transito"
+                class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -182,18 +187,9 @@
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Homologaciones de acuerdo
                   </li>
-                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li> -->
-                </ul>
               </div>
-              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20de%20Familia"
+                class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -225,12 +221,9 @@
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de alquileres y expensas
                   </li>
-                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li> -->
                 </ul>
               </div>
-              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20Privado" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -262,12 +255,9 @@
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Venta de inmuebles y muebles
                   </li>
-                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li> -->
                 </ul>
               </div>
-              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Sucesiones" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -294,17 +284,12 @@
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de haberes
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i> Envío de telegramas y contestación de cartas documentos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i> Envío de telegramas y contestación de
+                    cartas documentos
                   </li>
-                  <!-- <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
-                  </li> -->
                 </ul>
               </div>
-              <a href="#" class="btn btn-dark w-100 ">Contactar</a>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20Laboral" class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
