--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -24,7 +22,8 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -38,7 +37,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
 
             <li class="nav-item">
@@ -104,7 +103,7 @@
 
     <section id="quienes-somos" class="container pb-5">
       <div class="row">
-        <h2>Quienes somos</h2>
+        <h2 class="titulo titulo-grande">Quienes somos</h2>
         <div class="col-12 col-lg-6 d-flex flex-column justify-content-between py-3">
           <div class="fs-5">
             <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
@@ -121,8 +120,8 @@
     </section>
 
     <section id="nuestros-servicios" class="container pb-5">
-      <h2>Nuestros Servicios</h2>
-      <h3>Atendemos en Neuquén Capital</h3>
+      <h2 class="titulo titulo-grande">Nuestros Servicios</h2>
+      <h3 class="titulo">Atendemos en Neuquén Capital</h3>
       <div class="row g-4 d-flex justify-content-center">
         <div class="col-12 col-md-6 col-xl-4">
           <div class="card h-100 border-0" style="background-color: #f4f4f4">
@@ -326,7 +325,7 @@
 
     <section id="honorarios" class="container pb-5">
       <div class="row g-5">
-        <h2>Honorarios</h2>
+        <h2 class="titulo titulo-grande">Honorarios</h2>
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
           <div class="fondo-gold py-4 text-center mb-1">
             <span class="text-white fs-3 fw-bold">Gastos Iniciales Bonificados</span>
@@ -362,7 +361,7 @@
     <section id="contacto" class="container pb-5">
       <div class="row">
         <div class="col-12 col-md-6 py-3">
-          <h2 class="pb-3 ">Contacto</h2>
+          <h2 class="pb-3 titulo titulo-grande">Contacto</h2>
           <p>Matías Nordenstrom Estudio Jurídico</p>
           <p>Neuquén, Neuquén.</p>
           <p> Telefono: (299) 603-7510</p>
@@ -371,7 +370,7 @@
 
         </div>
         <div class="col-12 col-md-6 py-3">
-          <h3 class="pb-3">Envia tu mensaje</h3>
+          <h3 class="pb-3 titulo">Envia tu mensaje</h3>
           <form action="">
             <div class="form-floating mb-3">
               <input type="text" class="form-control" id="nombre" placeholder="Maria" required>
@@ -415,7 +414,7 @@
     <div class="container text-white mt-2">
       <div class="row justify-content-center g-2">
         <div class="col-12 col-md-4 text-center text-md-start">
-          <h3 class="pb-3">MATÍAS NORDENSTROM</h3>
+          <h3 class="pb-3 titulo">MATÍAS NORDENSTROM</h3>
           <p>Bienvenido</p>
           <p>Quienes somos</p>
           <p>Servicios</p>
@@ -423,14 +422,14 @@
           <p>Contacto</p>
         </div>
         <div class="col-12 col-md-4 text-center text-md-start">
-          <h3 class="pb-3">CONTACTO</h3>
+          <h3 class="pb-3 titulo">CONTACTO</h3>
           <p>matias.correanqn@gmail.com</p>
           <p>Neuquén</p>
           <p>299 603-7510</p>
 
         </div>
         <div class="col-12 col-md-4 text-center text-md-start">
-          <h3 class="pb-3">REDES</h3>
+          <h3 class="pb-3 titulo">REDES</h3>
 
           <div class="d-flex justify-content-center justify-content-md-start">
             <a class="nav-link fs-3 text-gold pe-4" href="#"><i class="bi bi-whatsapp"></i></a>
