color pagina actual

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg fondo-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+    <nav id="nav-principal" class="navbar navbar-expand-lg fondo-dark border-bottom border-bottom-dark w-100" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand mx-3 text-white" id="titulo" href="#"><img src="img/MATÍAS NORDENSTROM.png" alt=""
             style="max-width: 200px;"></a>
@@ -41,19 +41,19 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
 
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="#">BIENVENIDO</a>
+              <a class="nav-link fs-5 pe-3 activo" aria-current="page" href="#">BIENVENIDO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#quienes-somos">QUIENES SOMOS</a>
+              <a class="nav-link fs-5 pe-3" href="#quienes-somos">QUIENES SOMOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#nuestros-servicios">SERVICIOS</a>
+              <a class="nav-link fs-5 pe-3" href="#nuestros-servicios">SERVICIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#honorarios">HONORARIOS</a>
+              <a class="nav-link fs-5 pe-3" href="#honorarios">HONORARIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#contacto">CONTACTO</a>
+              <a class="nav-link fs-5" href="#contacto">CONTACTO</a>
             </li>
           </ul>
 
@@ -415,6 +415,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="js/nav-color.js"></script>
 
 </body>
 
