--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/abogados223-696x392.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="img/estudio-abogado-1.jpg"  class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/estudio-juridico-duprat-pellegrini-equipo.jpg" height="500" class="d-block w-100" alt="...">
+            <img src="img/estudio-abogado-2.jpg"  class="d-block w-100 " alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/juridico.png" height="500" class="d-block w-100" alt="...">
+            <img src="img/estudio-abogado-3.jpg"  class="d-block w-100 " alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/estudio-abogado-4.jpg"  class="d-block w-100 " alt="...">
           </div>
         </div>
 
@@ -90,7 +93,7 @@
         </button>
       </div>
 
-      <div class="py-4 fondo-dark">
+      <div class="py-4 fondo-dark" style="border-radius: 0px 0px 4px 4px;">
         <p class="fs-3 px-5 fst-italic text-center text-white">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempora eum illum omnis accusantium
           rerum
@@ -117,7 +120,7 @@
           </div> -->
         </div>
         <div class="col-12 col-lg-6">
-          <img class="w-100" src="img/quienes-somos-2.jpg" alt="">
+          <img class="w-100 rounded-1" src="img/martillo-esposa.jpg" alt="">
         </div>
       </div>
     </section>
